[package]
name = "rusty-confluent"
version = "0.1.0"
authors = ["jaketarnow <jacobtarnow@gmail.com>"]
edition = "2018"

[dependencies]
avro-rs = "^0.6.5"
failure = "0.1.5"
serde   = { version = "1.0.89", features = ["derive", "rc"] }
serde_json = "1.0"
serde_derive = "1.0.0"
rdkafka = "0.21.0"
rdkafka-sys = "1.0.0"
futures = "0.1.21"
log = "0.4.6"
chrono = "0.4.0"
clap = "2.18.0"
env_logger = "0.3.0"
rand = "0.3.15"
tokio = "0.1.7"
schema_registry_converter = "1.0.0"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 3                # Controls the --opt-level the compiler builds with
debug = true                 # Controls whether the compiler passes `-g`
debug-assertions = true      # Controls whether debug assertions are enabled

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3                # Controls the --opt-level the compiler builds with
debug = false                # Controls whether the compiler passes `-g`
debug-assertions = false     # Controls whether debug assertions are enabled
lto = true